# tRAcINg

./: .gitignore  CMakeLists.txt  build_linux.sh
CUDAPathTracerRL/: .gitignore  CMakeLists.txt
CUDAPathTracerRL/include/: camera.h  camera_gpu.h  color.h  cudaHeaders.h  cudaMain.h  cuda_utils.h  cutil_math.h  gl_utils.h  lightsource.h  material.h  material_functions.h  object.h  pathtracer_params.h  pointlightsource.h  quadric.h  ray.h  ray_gpu.h  renderengine.h  renderengine_gpu.h  rl_helper_functions.h  scene_helper.h  shader_utils.h  sphere.h  sphere_gpu.h  structs.h  triangle.h  vector3D.h  world.h  world_gpu.h
CUDAPathTracerRL/shader/: fshader.fs  vshader.vs
CUDAPathTracerRL/src/: camera.cpp  color.cpp  cudaMain.cu  gl_utils.cpp  main.cpp  material.cpp  quadric.cpp  ray.cpp  renderengine.cpp  renderengine_gpu.cu  shader_utils.cpp  sphere.cpp  triangle.cpp  vector3D.cpp  world.cpp
ext/: CMakeLists.txt
ext/dynet/: CMakeLists.txt
ext/pybind11/tests/: test_chrono.py
include/RL/agent/ac/: AC_agent.hpp
include/RL/agent/ddpg/: ddpg_agent.hpp
include/RL/agent/dqn/: dqn_base_agent.hpp  dqn_prioritizedReply_agent.hpp  dqn_randomReply_agent.hpp
include/RL/agent/policy_gradient/: reinforce_agent.hpp
include/RL/agent/ppo/: PPO_Continuous_agent.hpp  PPO_Discrete_agent.hpp
include/RL/agent/qlearning/: qlearning_agent.hpp
include/RL/agent/sarsa/: sarsa_agent.hpp
include/RL/common/: memory_reply.hpp  rl_config.hpp  state_action.hpp
include/RL/env/aifan_simple/: aifan.hpp
include/RL/env/gym_cpp/: gymcpp.hpp
include/RL/network/: dynet_network.hpp
include/RL/tool/: generic.hpp  getopt.hpp  math_func.hpp  random.hpp  reduce_tree.hpp  ring_vector.hpp  utility.hpp
include/bsdf/: IrradianceVolumeBSDF.hpp
include/core/: BSDF.hpp  Bitmap.hpp  Block.hpp  Camera.hpp  Color.hpp  Common.hpp  PropertyList.hpp  ReconstructionFilter.hpp
include/warp/: Warp.hpp
scene/bsdf/: ajax-dielectric.xml  ajax-microfacet.xml  ajax-plastic.xml  ajax-roughDiffuse.xml  ajax-roughconductor.xml  sphere-roughconductor.xml  texture_alpha.xml  texture_alpha_bsdf.xml  texture_bump.xml  texture_normal.xml  unreal-conductor.xml  unreal-dielectric.xml  unreal-microfacet.xml  unreal-plastic.xml  unreal-roughDiffuse.xml  unreal-roughconductor.xml
scene/pa0/: bunny.xml  unreal.xml
scene/pa1/: bunny.exr
scene/pa4/cbox/: cbox-dielectric.xml  cbox-distributed.xml  imgui.ini
scene/pa4/motto/: motto-dielectric.xml  motto-diffuse.xml
scene/pa5/cbox/: cbox-ems.xml  cbox-mats.xml  cbox-mis.xml  cbox-simple.xml  cbox-states.xml  cbox-whited.xml  imgui.ini
scene/pa5/odyssey/: door_ems.xml  door_mats.xml  door_mis.xml  door_states.xml  imgui.ini  odyssey-ems.xml  odyssey-mats.xml  odyssey-mis.xml  pillars_ems.xml  pillars_mats.xml  pillars_mis.xml
scene/pa5/table/: table-ems.xml  table-mats.xml  table-mis.xml
scene/pa5/veach_mi/: veach-ems.xml  veach-mats.xml  veach-mis.xml  veach-states.xml
scene/pa6/: envmap0.xml  envmap1.exr  envmap1.xml  envmap2.exr  envmap2.xml  envmap3.exr  envmap3.xml  envmap4.xml
sewar/docs/: make.bat
src/: Main.cpp  RL_test.cpp  train_tok-embed.cpp
src/bsdf/: BumpMapBSDF.cpp  CoatingBSDF.cpp  ConductorBSDF.cpp  DielectricBSDF.cpp  DiffuseBSDF.cpp  IrradianceVolumeBSDF.cpp  MicrofacetBSDF.cpp  MirrorBSDF.cpp  NormalMapBSDF.cpp  PlasticBSDF.cpp  RoughCoatingBSDF.cpp  RoughConductorBSDF.cpp  RoughDielectricBSDF.cpp  RoughDiffuseBSDF.cpp  RoughPlasticBSDF.cpp  TwoSidedBSDF.cpp
src/camera/: PerspectiveCamera.cpp
src/core/: BSDF.cpp  Bitmap.cpp  Block.cpp  Chi2Test.cpp  Color.cpp  Common.cpp  Mesh.cpp  Object.cpp  Parser.cpp  PropertyList.cpp  RoughTransmitance.cpp  Scene.cpp  Screen.cpp  StudentTTest.cpp  Texture.cpp
src/emitter/: AreaLight.cpp  ConstantLight.cpp  DirectionalLight.cpp  EnvironmentLight.cpp  PointLight.cpp
src/integrator/: AoIntegrator.cpp  NormalIntegrator.cpp  SimpleIntegrator.cpp  WhittedIntegrator.cpp
src/mesh/: WavefrontObjMesh.cpp
src/texture/: BitmapTexture.cpp  CurvatureTexture.cpp  ScaleTexture.cpp
src/train/: CMakeLists.txt  train_AC.cpp  train_PPO_Continuous.cpp  train_PPO_Discrete.cpp  train_basic_test.cpp  train_ddpg.cpp  train_dqn.cpp  train_dqn_aifan.cpp  train_qlearning_cliffwalking.cpp  train_reinforce.cpp  train_sarsa_cliffwalking.cpp
src/warp/: Microfacet.cpp  Warp.cpp  Warptest.cpp
